[package]
name = "libnx"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.backtrace]
path = "../backtrace-rs"
default-features = false
features = ["std", "libunwind", "gimli-symbolize"]
