[package]
name = "libnx"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.10"
thiserror = "1.0.15"
phf = "0.8.0"
libc = { git = "https://github.com/leo60228/libc.git", branch = "bindgen-newlib" }
cpp = "0.5.4"
rusttype = "0.9.0"
once_cell = "1.3.1"

[dependencies.backtrace]
path = "../backtrace-rs"
default-features = false
features = ["std", "libunwind", "gimli-symbolize"]

[build_dependencies]
phf_codegen = "0.8.0"
proc-macro2 = "1.0.10"
cpp_build = "0.5.4"
