[package]
name = "libnx"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.10"
thiserror = "1.0.15"
phf = "0.8.0"
libc = { git = "https://github.com/leo60228/libc.git", branch = "bindgen-horizon" }
cpp = "0.5.4"
rusttype = "0.9.0"
once_cell = "1.3.1"
lru_time_cache = "0.10.0"

[dependencies.backtrace]
git = "https://github.com/leo60228/backtrace-rs.git"
branch = "linkle-dwarf"

[build_dependencies]
phf_codegen = "0.8.0"
proc-macro2 = "1.0.10"
cpp_build = "0.5.4"
